--- a/Aula_01.ipynb
+++ b/Aula_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhnJQwrpJy7T4RTe1/QMxJ"
+      "authorship_tag": "ABX9TyONn6BwTyck8v5O2+qXVLsZ"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,8 +24,8 @@
       "outputs": [],
       "source": [
         "from sklearn.datasets import load_iris\n",
-        "\n",
-        "X, y = load_iris(return_X_y=True, as_frame=True)"
+        "# as_frame Se for True, os dados são um DataFrame do pandas incluindo colunas com dtypes apropriados (numéricos).\n",
+        "X, y = load_iris(return_X_y=True , as_frame=True)"
       ]
     },
     {
@@ -53,7 +53,7 @@
           "height": 447
         },
         "id": "ZzM9gZMg1vau",
-        "outputId": "ae547255-bf4e-4ef5-f7ac-d5658edd3224"
+        "outputId": "6446b0dd-525a-4460-860b-54ebdb0b483c"
       },
       "execution_count": null,
       "outputs": [
@@ -61,11 +61,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7b794940d360>"
+              "<matplotlib.collections.PathCollection at 0x7db0af21f730>"
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -100,7 +100,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NpN_lkCm4cic",
-        "outputId": "79c0edf3-f7ec-49e2-f2a9-d14bf3995e50"
+        "outputId": "13005c92-0e9c-4b80-8fd8-c20d5e954694"
       },
       "execution_count": null,
       "outputs": [
@@ -124,7 +124,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VYcs6JeO44X-",
-        "outputId": "367c0384-8439-47dc-d48d-1e1b77e6ac57"
+        "outputId": "adc1a622-3fb9-48f5-8558-db4a97b609af"
       },
       "execution_count": null,
       "outputs": [
@@ -142,7 +142,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 6
         }
       ]
     },
@@ -160,7 +160,7 @@
           "height": 430
         },
         "id": "B2-3pKxK5MZD",
-        "outputId": "5a9185c8-8f71-41e1-9554-0ddad3511009"
+        "outputId": "e65698b6-eea6-4dbd-c5ce-3e6e808f9730"
       },
       "execution_count": null,
       "outputs": [
@@ -192,7 +192,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I-tDk9rs6zM6",
-        "outputId": "285ee064-775d-41d9-db5c-5ddb39be4a59"
+        "outputId": "44af35a1-4ecf-4cdd-ad0d-208802b77ca0"
       },
       "execution_count": null,
       "outputs": [
@@ -247,7 +247,7 @@
           "height": 430
         },
         "id": "jLEq0frQ7lFb",
-        "outputId": "5bc2af52-b579-42b2-94fd-34e0f54ee7f8"
+        "outputId": "a22c6e1d-a463-419a-c145-8eea6e0a8146"
       },
       "execution_count": null,
       "outputs": [
@@ -277,7 +277,7 @@
           "height": 539
         },
         "id": "6OAKuttU8fqO",
-        "outputId": "38ed0bb7-6ff9-4888-b01b-0956a6464571"
+        "outputId": "819e3efb-d6b3-4f9e-82b7-13ad9aa7773d"
       },
       "execution_count": null,
       "outputs": [
@@ -285,11 +285,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7b7948872800>"
+              "<matplotlib.collections.PathCollection at 0x7db0a91cde40>"
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 12
         },
         {
           "output_type": "display_data",
@@ -315,7 +315,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pjogjwh_-CYe",
-        "outputId": "4cf82855-1b10-47cb-d3c0-a8aa3177a7ba"
+        "outputId": "9f0ca482-6561-45b3-dd91-ff9e8937db5b"
       },
       "execution_count": null,
       "outputs": [
@@ -327,7 +327,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 13
         }
       ]
     },
@@ -341,7 +341,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8kYF4PflCZQB",
-        "outputId": "6b66137d-c07d-429f-cf13-781415b41089"
+        "outputId": "3272beed-67df-4d3b-86fe-69bb393603f9"
       },
       "execution_count": null,
       "outputs": [
@@ -365,7 +365,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SlSXCpmnD6ck",
-        "outputId": "c4384b9d-cf7c-493f-d919-7d6c8fb702dd"
+        "outputId": "2e77edf0-2dda-4337-ec67-13ba9f8422a1"
       },
       "execution_count": null,
       "outputs": [
@@ -377,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 15
         }
       ]
     },
@@ -391,7 +391,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rLyMsGmlEtPG",
-        "outputId": "7214ea9f-649d-4bf0-e529-f741b181f16a"
+        "outputId": "f279d0a2-6de7-4cc8-9b94-fc2cf8ab185e"
       },
       "execution_count": null,
       "outputs": [
@@ -415,7 +415,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y-2gF1peEzx5",
-        "outputId": "4396b4f2-c661-4b71-fe47-4976d4adca00"
+        "outputId": "883c38e4-84f6-46b5-c880-496aceb7983d"
       },
       "execution_count": null,
       "outputs": [
@@ -427,7 +427,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 17
         }
       ]
     },
@@ -449,7 +449,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OpAzIj4yEz4i",
-        "outputId": "1aae7ad7-4970-4b6d-c2de-8f0e31b67d64"
+        "outputId": "d72cd221-085d-4379-a342-9b130dc62acb"
       },
       "execution_count": null,
       "outputs": [
@@ -505,7 +505,7 @@
           "height": 430
         },
         "id": "vzK_noX-GiqZ",
-        "outputId": "9c81c81f-27c3-4086-d41c-0aabfe71885b"
+        "outputId": "cd66fefb-6529-4515-e041-276b56ca13a5"
       },
       "execution_count": null,
       "outputs": [
@@ -531,7 +531,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JOSYRAgqIXxk",
-        "outputId": "b1da631e-72df-4e88-ca92-26bb72855f17"
+        "outputId": "a7fc2f62-139e-4f80-ed8d-26836695772f"
       },
       "execution_count": null,
       "outputs": [
@@ -543,7 +543,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 20
         }
       ]
     },
@@ -557,7 +557,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oViUcFD7Ijt1",
-        "outputId": "12394bc6-19b1-4df2-f94f-a5d2f5e73217"
+        "outputId": "5e852ead-0f45-42d1-f615-35e0ad6f28dc"
       },
       "execution_count": null,
       "outputs": [
@@ -569,7 +569,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 75
+          "execution_count": 21
         }
       ]
     },
@@ -579,7 +579,7 @@
         "valores_k = []\n",
         "s = []\n",
         "\n",
-        "for i in range(2,15):\n",
+        "for i in range(2,15): # Começa com o número de clusters\n",
         "  kmeans = KMeans(n_clusters=i,random_state=0).fit(X)\n",
         "  valores_k.append(i)\n",
         "  s.append(metrics.silhouette_score(X,kmeans.labels_))"
@@ -589,7 +589,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vC37pNWjJAWU",
-        "outputId": "f2f14235-6b85-481a-8826-045c0df958c5"
+        "outputId": "44a9595c-5198-42ac-f11c-9a4733987f48"
       },
       "execution_count": null,
       "outputs": [
@@ -642,7 +642,7 @@
           "height": 430
         },
         "id": "yGl88TKkJy0k",
-        "outputId": "4dac105e-0fda-4ac7-bc4b-f950af94f8c7"
+        "outputId": "f8c9b409-b7eb-4d46-f52d-8fdda183e289"
       },
       "execution_count": null,
       "outputs": [
